<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/welcome_bg" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/catamaran_regular"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="#121519"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opsl"
                android:text="@string/slogan"
                android:textAlignment="center"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/mobile_bg"
                android:text="@string/login_with_mobile"
                android:onClick="openMobileAuthPage"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginEnd="20dp"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:fontFamily="@font/catamaran_regular"
                android:drawableEnd="@drawable/mobile_img" />
            <Button
                android:id="@+id/googleSignIn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/google_bg"
                android:text="@string/login_with_google"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:fontFamily="@font/catamaran_regular"
                android:drawableEnd="@drawable/google_logo" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>