<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobileAuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="connection.json"
                app:lottie_loop="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_num"
                android:fontFamily="@font/opsr"
                android:textColor="#6371EA"
                android:textSize="22sp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_ver_txt"
                android:fontFamily="@font/opsr"
                android:layout_marginTop="5dp"
                android:textColor="#666"
                android:textSize="15sp"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_gravity="center">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countcodepicker"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                app:ccp_defaultNameCode="US"/>
            <EditText
                android:id="@+id/num_textField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textColor="#353535"
                android:background="@drawable/textviews_bg"
                android:inputType="number"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/verify_number"
                android:onClick="sendCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/google_bg"
                android:text="@string/ver_otp"
                android:fontFamily="@font/samsungsans_regular"
                android:textColor="#fff"
                android:drawableEnd="@drawable/mobile_img"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textSize="17sp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/otp_container"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:background="#101"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="20dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="phone_number_ver.json"
                app:lottie_loop="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="294dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_confirmation_code"
                android:textColor="#fff"
                android:textSize="17sp"
                android:fontFamily="@font/catamaran_medium"
                android:textAlignment="center"/>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="210dp">

            <com.chaos.view.PinView
                android:id="@+id/otp_input_box"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/catamaran_medium"
                android:hint="@string/otp_hint"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#fff"
                android:textColorHint="#666"
                android:textSize="17sp"
                app:itemCount="6"
                app:itemHeight="40dp"
                app:itemRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineColor="#666"
                app:lineWidth="0.9dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/verify_otp_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/mobile_bg"
                android:drawableEnd="@drawable/mobile_img"
                android:fontFamily="@font/samsungsans_regular"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="17sp"
                android:onClick="verifyCode"
                />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>